add devyavinash card info

--- a/index.html
+++ b/index.html
@@ -5716,6 +5716,35 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+<!-- ________ devyavinash card START ________  -->
+        <div class="card">
+          <p class="name">Avinash</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/sde_Avinash" target="_blank">@sde_Avinash</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/devyavinash" target="_blank">@devyavinash</a>
+          </p>
+          <p class="about">
+            I'm a software developer with a passion for open-source contributions and a love for learning new technologies.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://web.dev/learn" target="_blank" title="First Resource">webdev_learn</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development" target="_blank" title="Second Resource">mdn_webdev</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/catalog/subject/web-development" target="_blank" title="Third resource">codecademy_webdev</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ devyavinash card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
