resolved the conflict

--- a/index.html
+++ b/index.html
@@ -5715,6 +5715,32 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+        <!-- ________ devyavinash card START ________  -->
+        <div class="card">
+          <p class="name">Avinash</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/sde_Avinash" target="_blank">@sde_Avinash</a>
+            <i class="fab fa-github"></i>
+            <a href="https://x.com/sde_Avinash" target="_blank">@devyavinash</a>
+          </p>
+          <p class="about">I am an emerging software developer learning though open source contribution</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.jsv9000.app/" target="_blank" title="First Resource">Javascript execution visualization</a>
+              </li>
+              <li>
+                <a href="https://namastedev.com/" target="_blank" title="Second Resource">Javascript</a>
+              </li>
+              <li>
+                <a href="https://fullstackopen.com/en/" target="_blank" title="Third resource">Web Dev</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ devyavinash  card END ________  -->
 
 <!-- ________ devyavinash card START ________  -->
         <div class="card">
