--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *Baskaran Nadar* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Baskaran Nadar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.x.com/baskaranNadar" target="_blank">baskaran_nadar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/24f2008200" target="_blank">baskaran-nadar</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+
 
         <!-- ________ *Sirige Abhinav* Contributor card START ________  -->
         <div class="card">
